<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="65dp"
        android:layout_height="38dp"

        android:padding="24dp"
        android:text="Question"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />


    <Button

        android:id="@+id/btnMultipleChoiceA"
        android:layout_width="107dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/multipleChoiceA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"


        />

    <Button
        android:id="@+id/btnMultipleChoiceB"
        android:layout_width="7dp"
        android:layout_height="4dp"
        android:text="@string/multipleChoiceB"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/btnMultipleChoiceC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multipleChoiceC"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        />

    <Button
        android:id="@+id/btnMultipleChoiceD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multipleChoiceD"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        />

    <Button
        android:id="@+id/btnMultipleChoiceE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multipleChoiceE"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        />

</android.support.constraint.ConstraintLayout>